--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-
 -e file:///home/limyreth/doc/eclipse_workspace/chicken_turtle_util
 -e file:///home/limyreth/doc/eclipse_workspace/deep_genome_core
 alabaster==0.7.9
 apipkg==1.4
 attrs==16.2.0
 babel==2.3.4
-bottleneck==1.0.0
-click==6.3
+bottleneck==1.1.0
+click==6.6
 collections-extended==0.8.0
 coverage-pth==0.0.1
 coverage==4.2
@@ -22,31 +21,32 @@ MarkupSafe==0.23
 matplotlib==1.5.3
 more-itertools==2.2
 networkx==1.11
-numexpr==2.5
-numpy==1.10.4
+numexpr==2.6.1
+numpy==1.11.2
 numpydoc==0.6.0
-pandas==0.18.1
-plumbum==1.6.1.post0
-psutil==4.1.0
+pandas==0.19.0
+plumbum==1.6.2
+psutil==4.3.1
 py==1.4.31
 Pygments==2.1.3
-pymysql==0.7.2
+pymysql==0.7.9
 pyparsing==2.1.10
-pytest-cov==2.3.1
+pytest-capturelog==0.7
+pytest-cov==2.4.0
 pytest-env==0.6.0
 pytest-mock==1.2
-pytest-xdist==1.14
-pytest==2.9.0
-python-dateutil==2.5.0
-pytz==2016.1
+pytest-xdist==1.15.0
+pytest==3.0.3
+python-dateutil==2.5.3
+pytz==2016.7
 pyxdg==0.25
-scikit-learn==0.17.1
-scipy==0.17.0
+scikit-learn==0.18
+scipy==0.18.1
 six==1.10.0
 snowballstemmer==1.2.1
 sphinx-rtd-theme==0.1.9
-Sphinx==1.4.5
-sqlalchemy==1.0.12
+Sphinx==1.4.8
+sqlalchemy==1.1.2
 sqlparse==0.2.1
 
 # The following packages are commented out because they are
