--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,9 +1,7 @@
 # Analog to pytil's workflow
 name: Publish to anaconda
 
-on:
-  release:
-    types: [published]
+on: [push]
 
 jobs:
   publish-conda-pkg:
@@ -22,7 +20,7 @@ jobs:
       run: |
         mkdir dist
         conda build . --channel anaconda --channel timdiels --output-folder dist
-    - name: Publish to anaconda
-      run: anaconda upload --all dist/linux-64/*.tar.bz2
-      env:
-        ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
+#   - name: Publish to anaconda
+#     run: anaconda upload --all dist/linux-64/*.tar.bz2
+#     env:
+#       ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
